--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,12 @@
 bin/
 gen/
 out/
-
+# Built application files
+/*/build/
 # Gradle files
 .gradle/
 build/
+gradle.properties
 
 # Local configuration file (sdk path, etc)
 local.properties
